tests/errors/E042.zen
struct a {
    b: struct b,
}

struct b {
    c: struct c,
}

struct c {
    a: struct a,
}